# codex-wrapper

./: .gitignore  Cargo.toml  README.md  package.json  turbo.json  vitest.config.ts
apps/chat/: package.json  vite.config.ts
apps/chat/src/: branding.ts  chatRouteMenuActions.test.ts  desktopMenuActions.ts  main.tsx  tauriDesktopBridge.ts  vite-env.d.ts
apps/chat/src-tauri/: Cargo.toml  tauri.conf.json
apps/chat/src-tauri/capabilities/: default.json
apps/chat/src-tauri/src/: main.rs
apps/chat/src/components/: BranchToolbarBranchSelector.tsx  ChatMarkdown.tsx
apps/code/: package.json  tsconfig.json  vite.config.ts
apps/code/src/: env.ts  main.tsx  react-compat.js  tauriDesktopBridge.test.ts  tauriDesktopBridge.ts
apps/code/src-tauri/: Cargo.toml  tauri.conf.json
apps/code/src-tauri/src/: main.rs
apps/code/src/components/ui/: alert.tsx
apps/code/src/routes/: _chat.tsx
crates/server/: Cargo.toml
crates/server/src/: attachments.rs  claude_adapter.rs  codex_adapter.rs  config.rs  decider.rs  diff.rs  git.rs  keybindings.rs  lib.rs  main.rs  model.rs  open.rs  orchestration.rs  persistence.rs  projector.rs  provider_adapter.rs  provider_command_reactor.rs  provider_health.rs  provider_runtime.rs  provider_runtime_ingestion.rs  runtime.rs  state.rs  terminal.rs  util.rs  workspace.rs  ws_server.rs
