[package]
name = "server"
version = "0.0.13"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.89"
axum = { version = "0.8.1", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde", "clock"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
