[package]
name = "app-chat"
version = "0.0.13"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
server = { path = "../../../crates/server" }
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.2", features = [] }
webbrowser = "1.0.6"
